# SamsCompressor

./: CMakeLists.txt  README.md  bmp.c  bmp.h  coder.c  coder.h  jpeg.c  main.c  sams.c  sams.h
documentation/: IPDocumentation.aux  IPDocumentation.nav  IPDocumentation.out  IPDocumentation.tex  IPDocumentation.toc  IPDocumentation.vrb
